--- a/app/views/core_pages/about.html.erb
+++ b/app/views/core_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>CorePages#about</h1>
-<p>Find me in app/views/core_pages/about.html.erb</p>
+<h1>Abuout NW Brewmeisters</h1>
+<p>
+  Find me in app/views/core_pages/about.html.erb
+</p>
