--- a/app/views/core_pages/contact.html.erb
+++ b/app/views/core_pages/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>CorePages#contact</h1>
-<p>Find me in app/views/core_pages/contact.html.erb</p>
+<h1>Contact NW Brewmeisters</h1>
+<p>
+  Find me in app/views/core_pages/contact.html.erb
+</p>
