--- a/app/views/core_pages/home.html.erb
+++ b/app/views/core_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>CorePages#home</h1>
-<p>Find me in app/views/core_pages/home.html.erb</p>
+<h1>NW Brewmeisters</h1>
+<p>
+  This is the home page for nwbrewneisters.
+</p>
