imporve markup and add title selector test

--- a/app/views/core_pages/about.html.erb
+++ b/app/views/core_pages/about.html.erb
@@ -1,4 +1,15 @@
-<h1>About NW Brewmeisters</h1>
-<p>
-  Find me in app/views/core_pages/about.html.erb
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About | NW Brewmeisters</title>
+  </head>
+  <body>
+    <h1>NW Brewmeisters</h1>
+    <p>
+      This is the about page for NW Brewmeisters
+    </p>
+    <p>
+      Just a couple of guys living NW Washington who like beer...and think you should too.
+    </p>
+  </body>
+</html>
