--- a/app/views/core_pages/home.html.erb
+++ b/app/views/core_pages/home.html.erb
@@ -1,4 +1,15 @@
-<h1>NW Brewmeisters</h1>
-<p>
-  This is the home page for nwbrewneisters.
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home | NW Brewmeisters</title>
+  </head>
+  <body>
+    <h1>NW Brewmeisters</h1>
+    <p>
+      This is the home page for NW Brewmeisters
+    </p>
+    <p>
+      Just a couple of guys living NW Washington who like beer...and think you should too.
+    </p>
+  </body>
+</html>
