--- a/app/views/core_pages/contact.html.erb
+++ b/app/views/core_pages/contact.html.erb
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Contact | NW Brewmeisters</title>
-  </head>
-  <body>
-    <h1>NW Brewmeisters</h1>
-    <p>
-      This is the contact page for NW Brewmeisters
-    </p>
-    <p>
-      Just a couple of guys living NW Washington who like beer...and think you should too.
-    </p>
-  </body>
-</html>
+<% provide(:title, "Contact") %>
+<h1>NW Brewmeisters</h1>
+<p>
+  This is the contact page for NW Brewmeisters
+</p>
+<p>
+  Just a couple of guys living NW Washington who like beer...and think you should too.
+</p>
