add header and prep markup for styling

--- a/app/views/core_pages/home.html.erb
+++ b/app/views/core_pages/home.html.erb
@@ -1,7 +1,13 @@
-<h1>NW Brewmeisters</h1>
-<p>
-  This is the home page for NW Brewmeisters
-</p>
-<p>
-  Just a couple of guys living NW Washington who like beer...and think you should too.
-</p>
+<div class="center jumbotron">
+  <h1>NW Brewmeisters</h1>
+  <h2>
+    <p>
+      This is the home page for NW Brewmeisters
+    </p>
+  </h2>
+  <p>
+    Just a couple of guys living NW Washington who like beer...and think you should too.
+  </p>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
