--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <small>
     <a href="http://www.nwbrewmeisters.com/">NW Brewmeisters</a>
     sponsored by <a href="http://www.soundlancer.net/">SoundLancer LLC </a><br>
-    and developed by <a href="http://www.smyhktech.net/">SmyhkTech </a>&copy; 2017
+    Developed by <a href="http://www.smyhktech.net/">SmyhkTech </a>&copy; 2017
   </small>
   <nav>
     <ul>
