--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "nwbrewmeisters", '#', id: "logo" %>
+    <%= link_to "nwbrewmeisters", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", '#' %></li>
+        <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Calender", '#' %></li>
         <li><%= link_to "Recipes", '#' %></li>
         <li><%= link_to "Log in", '#' %></li>
