add layout integration test and title helper

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
     <a href="http://www.nwbrewmeisters.com/">NW Brewmeisters</a>
-    sponsored by <a href="http://www.soundlancer.net/">SoundLancer LLC </a><br>
+    sponsored by <a href="http://www.soundlancer.com/">SoundLancer LLC </a><br>
     Developed by <a href="http://www.smyhktech.net/">SmyhkTech </a>&copy; 2017
   </small>
   <nav>
