finish routes and basic layout

--- a/app/views/core_pages/home.html.erb
+++ b/app/views/core_pages/home.html.erb
@@ -3,6 +3,6 @@
   <h2>
     Just a couple of guys living NW Washington who like beer...and think you should too.
   </h2>
-  
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
