--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -6,5 +6,4 @@
   Welcome to NW Brewmeisters! Please click the link below to activate your account:
 </p>
 
-<%= link_to "Activate my account" edit_account_activation_url(@user.activation_token,
-                                                              email: @user.email) %>
+<%= link_to "Activate my account", edit_account_activation_url(@user.activation_token, email: @user.email) %>
