--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
 <li id="article-<%= article.id %>">
-  <%= link_to gravatar_for(.user, size: 50), article.user %>
+  <%= link_to gravatar_for(article.user, size: 50), article.user %>
   <span class="user"><%= link_to article.user.name, article.user %></span>
   <span class="title"><%= article.title %></span>
   <span class="body"><%= article.body %></span>
