add users profile test for articles

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,6 +4,6 @@
   <span class="title"><%= article.title %></span>
   <span class="body"><%= article.body %></span>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(article.created_at) %> ago.
+    Posted <%= time_ago_in_words(article.created_at) %>
   </span>
 </li>
