--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -6,4 +6,9 @@
   <span class="timestamp">
     Posted <%= time_ago_in_words(article.created_at) %> ago.
   </span>
+
+  <% if current_user.admin? %>
+    <%= link_to "delete", article, method: :delete, data: { confirm: "You sure?" } %>
+  <% end %>
+
 </li>
