--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,8 +1,14 @@
 <li id="article-<%= article.id %>">
   <%= link_to gravatar_for(article.user, size: 50), article.user %>
-  <span class="user"><%= link_to article.user.name, article.user %></span>
+  <span class="user">
+    <%= link_to article.user.name, article.user %>
+  </span>
   <span class="title">
-    <%= article.title %>
+    <%= link_to article.title, article_path(article) %>
+  </span>
+  <span class="body"><%= article.body %></span>
+  <span class="timestamp">
+    Posted <%= time_ago_in_words(article.created_at) %> ago.
     <% if current_user && current_user.admin? %>
       <%= link_to "delete", article, method: :delete, data: { confirm: "You sure?" } %>
     <% end %>
@@ -11,9 +17,4 @@
       <%= link_to "edit", edit_article_path(article) %>
     <% end %>
   </span>
-  <span class="body"><%= article.body %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(article.created_at) %> ago.
-  </span>
-
 </li>
