--- a/app/views/core_pages/home.html.erb
+++ b/app/views/core_pages/home.html.erb
@@ -6,3 +6,7 @@
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+
+<div>
+  <%= render 'shared/feed' %>
+</div>
