--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,8 +9,10 @@
   <span class="body"><%= article.body %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(article.created_at) %> ago.
-    <% if current_user?(article.user) || (current_user && current_user.admin?)%>
+    <% if current_user?(article.user) %>
       <%= link_to "edit", edit_article_path(article) %>
+    <% end %>
+    <% if current_user && current_user.admin? %>
       | <%= link_to "delete", article, method: :delete, data: { confirm: "You sure?" } %>
     <% end %>
   </span>
