add associations and map to article show view

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,10 @@
 <ol class="articles">
   <%= render @article %>
 </ol>
+
+<h3>Comments</h3>
+<% @article.comments.each do |comment| %>
+  <div class="well">
+    <%= comment.body %>
+  </div>
+<% end %>    
