refactor into comment partial

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,9 +3,4 @@
   <%= render @article %>
 </ol>
 
-<h3>Comments</h3>
-<% @article.comments.each do |comment| %>
-  <div class="well">
-    <%= comment.body %>
-  </div>
-<% end %>    
+<%= render partial: 'comments/comment', locals: { commentable: @article } %>
