add generic comments controller

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,3 +4,4 @@
 </ol>
 
 <%= render partial: 'comments/comment', locals: { commentable: @article } %>
+<%= render partial: 'comments/form', locals: { commentable: @article } %>
