--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,3 +5,4 @@
 </p>
 
 <%= render partial: 'comments/comment', locals: { commentable: @recipe } %>
+<%= render partial: 'comments/form', locals: { commentable: @recipe } %>
