--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,5 +4,8 @@
     <%= link_to gravatar_for(comment.user, size: 20), comment.user %>
     <%= link_to comment.user.name, user_path(comment.user) %> says:
     <%= comment.body %>
+    <% if current_user && current_user.admin? %>
+      | <%= link_to "delete", [commentable, comment], method: :delete %>
+    <% end %>
   </div>
 <% end %>
