--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for [commentable, Comment.new] do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
   <div class="form-group">
     <%= f.text_area :body, class: "form-control", placeholder: "Add a comment" %>
   </div>
