--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,3 +18,12 @@
     <% end %>
   </div>
 </div>
+<div class="col-md-8">
+  <% if @user.recipes.any? %>
+    <h3>Articles (<%= @user.recipes.count %>)</h3>
+    <ol class="recipes">
+      <%= render @recipes %>
+    </ol>
+    <%= will_paginate @recipes %>
+  <% end %>
+</div>
