--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       </h1>
     </section>
   </aside>
-  <div class="col-md-8">
+  <div class="col-md-8 well">
     <% if @user.articles.any? %>
       <h3>Articles (<%= @user.articles.count %>)</h3>
       <ol class="articles">
