--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -4,8 +4,12 @@
   <%= @recipe.description %>
 </p>
 
-<%= link_to "edit", edit_recipe_path(@recipe) %>
-<%= link_to "delete", @recipe, method: :delete, data: { confirm: "You sure?" } %>
+<% if current_user?(@recipe.user) %>
+  <%= link_to "edit", edit_recipe_path(@recipe) %>
+<% end %>
+<% if current_user && current_user.admin? %>
+  | <%= link_to "delete", @recipe, method: :delete, data: { confirm: "You sure?" } %>
+<% end %>
 
 <%= render partial: 'comments/comment', locals: { commentable: @recipe } %>
 <%= render partial: 'comments/form', locals: { commentable: @recipe } %>
