--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to "nwbrewmeisters", root_path, id: "logo" %>
+    <%= form_with url: search_path, local: true, method: :get, html: { class: "form-inline my-2 my-lg-0" } do |form| %>
+      <%= form.text_field :q, placeholder: "Search", data: { behavior: "autocomplete"}, class: "form-control mr-sm-2" %>
+      <%= form.button "Search", class: "btn btn-outline-success my-2 my-sm-0" %>
+    <% end %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
