--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,8 @@
       <%= form.text_field :q, placeholder: "Search", data: { behavior: "autocomplete"}, class: "form-control mr-sm-2" %>
       <%= form.button "Search", class: "btn btn-outline-success my-2 my-sm-0" %>
     <% end %>
-    <!-- covers main content -->
-    
+    <!-- covers over top of main content -->
+
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
