--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,13 @@
     <%= link_to "nwbrewmeisters", root_path, id: "logo" %>
 
     <!-- this is breaking the header -->
-    <%= form_with url: search_path, local: true, method: :get, html: { class: "form-inline my-2 my-lg-0" } do |form| %>
-      <%= form.text_field :q, placeholder: "Search", data: { behavior: "autocomplete"}, class: "form-control mr-sm-2" %>
-      <%= form.button "Search", class: "btn btn-outline-success my-2 my-sm-0" %>
+    <%= form_with url: search_path, local: true, method: :get, html: { class: "navbar-form navbar-left" } do |form| %>
+      <div class="input-group">
+        <%= form.text_field :q, placeholder: "Search", data: { behavior: "autocomplete"}, class: "form-control" %>
+        <span class="input-group-btn">
+          <%= form.button "Search", class: "btn btn-outline-success" %>
+        </span>
+      </div>
     <% end %>
     <!-- covers over top of main content -->
 
