make search box and button inline without covering headers

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,13 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to "nwbrewmeisters", root_path, id: "logo" %>
-
-    <!-- this is breaking the header -->
+    
     <%= form_with url: search_path, local: true, method: :get, html: { class: "navbar-form navbar-left" } do |form| %>
-      <div class="input-group">
+      <div class="form-group">
         <%= form.text_field :q, placeholder: "Search", data: { behavior: "autocomplete"}, class: "form-control" %>
-        <span class="input-group-btn">
-          <%= form.button "Search", class: "btn btn-outline-success" %>
-        </span>
       </div>
+      <%= form.button "Search", class: "btn btn-outline-success" %>
     <% end %>
-    <!-- covers over top of main content -->
 
     <nav>
       <ul class="nav navbar-nav navbar-right">
